--- a/src/LarpManager/Views/admin/personnage/updateSort.twig
+++ b/src/LarpManager/Views/admin/personnage/updateSort.twig
@@ -11,15 +11,108 @@
 		<li><a href="{{ path('personnage.admin.detail', {'personnage': personnage.id}) }}">Détail de {{ personnage.publicName }}</a></li>
 		<li class="active">Choix des sorts</li>
 	</ol>
-	
+
 	<div class="well bs-component">
+        <div class="header">
+            <h5>Choix des sortilèges</h5>
+        </div>
+
+        <ul class="list-group">
+            <li class="list-group-item">
+                <div class="btn-toolbar" role="toolbar" aria-label="...">
+
+                    <form class="form-inline" action="{{ path('personnage.admin.update.sort',{'personnage':personnage.id}) }}" method="POST" {{ form_enctype(form) }}>
+                        {% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+                        <div class="form-group">
+                            <div class="input-group">
+                                {{ form_widget(form.value) }}
+                            </div>
+                            <div class="input-group">
+                                {{ form_widget(form.type) }}
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-default" data-toggle="tooltup" data-placement="top" title="Lancer la recherche"><i class="fa fa-search"></i></button>
+                                    <a class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Reset" href="{{ path('personnage.admin.update.sort',{'personnage':personnage.id}) }}"><i class="fa fa-refresh"></i></a>
+                                    <a href="{{ path('magie.sort.add') }}"><i class="fa fa-plus"></i> Ajouter un sort</a>
+                                </div>
+                            </div>
+                        </div>
+                        {{ form_rest(form) }}
+                    </form>
+
+                </div>
+            </li>
+
+            <li class="list-group-item">
+                {% if paginator.totalItems == 1 %}
+                    <strong>1</strong> sort trouvé.
+                {% else %}
+                    <strong>{{ paginator.totalItems }}</strong> sorts trouvés.
+                {% endif %}
+
+                Montre <strong>{{ paginator.currentPageFirstItem }} - {{ paginator.currentPageLastItem }}</strong>.
+            </li>
+        </ul>
+
+        {{ paginator|raw }}
+
 		<table class="table table-striped table-bordered table-condensed">
 			<thead>
 				<tr>
-					<th>Nom</th>
-					<th>Niveau</th>
-					<th>Secret</th>
-					<th>Domaine</th>
+					<th>
+                        {% if app.request.get('order_dir') == 'ASC' and app.request.get('order_by') == 'label' %}
+                            <a href="{{ path('personnage.admin.update.sort', {'personnage':personnage.id, 'order_by': 'label', 'order_dir': 'DESC'}) }}">
+                        {%  else %}
+                                <a href="{{ path('personnage.admin.update.sort', {'personnage':personnage.id, 'order_by': 'label', 'order_dir': 'ASC'}) }}">
+                        {% endif %}
+                        Nom
+                        {% if app.request.get('order_by') == 'label'  %}
+                            {% if app.request.get('order_dir') == 'ASC' %}
+                                <span class="caret"></span>
+                            {%else%}
+                                <span class="dropup">
+                                    <span class="caret"></span>
+                                </span>
+                            {% endif %}
+                        {% endif %}
+                        </a>
+                    </th>
+                    <th>
+                        {% if app.request.get('order_dir') == 'ASC' and app.request.get('order_by') == 'niveau' %}
+                            <a href="{{ path('personnage.admin.update.sort', {'personnage':personnage.id, 'order_by': 'niveau', 'order_dir': 'DESC'}) }}">
+                        {%  else %}
+                            <a href="{{ path('personnage.admin.update.sort', {'personnage':personnage.id, 'order_by': 'niveau', 'order_dir': 'ASC'}) }}">
+                        {% endif %}
+                        Niveau
+                        {% if app.request.get('order_by') == 'niveau'  %}
+                            {% if app.request.get('order_dir') == 'ASC' %}
+                                <span class="caret"></span>
+                            {%else%}
+                                <span class="dropup">
+                                    <span class="caret"></span>
+                                </span>
+                            {% endif %}
+                        {% endif %}
+                        </a>
+                    </th>
+                    <th>Secret</th>
+                    <th>
+                        {% if app.request.get('order_dir') == 'ASC' and app.request.get('order_by') == 'domaine' %}
+                            <a href="{{ path('personnage.admin.update.sort', {'personnage':personnage.id, 'order_by': 'domaine', 'order_dir': 'DESC'}) }}">
+                        {%  else %}
+                            <a href="{{ path('personnage.admin.update.sort', {'personnage':personnage.id, 'order_by': 'domaine', 'order_dir': 'ASC'}) }}">
+                        {% endif %}
+                        Domaine
+                        {% if app.request.get('order_by') == 'domaine'  %}
+                            {% if app.request.get('order_dir') == 'ASC' %}
+                                <span class="caret"></span>
+                            {%else%}
+                                <span class="dropup">
+                                    <span class="caret"></span>
+                                </span>
+                            {% endif %}
+                        {% endif %}
+                        </a>
+                    </th>
 					<th>Description</th>
 					<th>Ajouter/Retirer</th>
 				</tr>
