Factorisation de l'ajout de compétence et de ses bonus
- Ajout du markdown manquant sur la liste des descriptions de famille de compétence

- Ajout des nullable de description et label de famille de compétence

- Ajout de constante pour les valeurs static des Langues

- Factorisation de méthodes dupliquées de PersonnageManager vers CompetenceHandler

Factorisation et nettoyage

- Ajout du markdown manquant sur la liste des descriptions de famille de compétence

- Ajout des nullable de description et label de famille de compétence

- Ajout de constante pour les valeurs static des Langues

- Factorisation du PersonnageManager pour gérer l'apprentissage des compétences et le gain de bonus associé

- fix de l'affichage des aides à la création

--- a/src/LarpManager/Views/admin/competenceFamily/fragment/list.twig
+++ b/src/LarpManager/Views/admin/competenceFamily/fragment/list.twig
@@ -15,7 +15,7 @@
 				</div>
 			</h4>
 			{% if competenceFamily.description|markdown %}
-				<p class="list-group-item-text text-default">{{ competenceFamily.description }}</p>
+				<p class="list-group-item-text text-default">{{ competenceFamily.description|markdown }}</p>
 			{% else %}
 				<p class="list-group-item-text text-warning">Attention, cette famille de compétence n'a pas description</p>
 			{%  endif %}
