Ajout du materiel de langue sur l'export de personnage

--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -89,6 +89,15 @@ table tr td {
 						<strong>{{ personnageLangue.langue}}</strong> ({{ personnageLangue.source }})<br />
 					{% endfor %}
 				</td>
+				<td>
+					<ul>
+						{% for materiel in langueMateriel %}
+							<li><strong>{{ materiel }}</strong></li>
+						{% else %}
+							<li>Aucun matériel</li>
+						{% endfor %}
+					</ul>
+				</td>
 			</tr>
 		</tbody>
 	</table>		
