Optimisation de la page stock/objet
Ajout d'une pagination
Ajout d'une recherche
On factorise quelque critère pour les combiner
On join des données qui seront demandées par la page
On retire les counts par rangement/tags qui alourdissent la page

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -156,10 +156,33 @@ ul.forum li
 	visibility: hidden;
 }
 
-.paginator-container {
+.paginator-container, .flex-container {
 	display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.flex-item, .flex-item-center {
+	display: flex;
+	flex-grow: 1;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.flex-item-center {
+	justify-content: center;
+}
+
+.flex-column {
+	flex-direction: column;
+}
+
+.right {
+	justify-content: right;
+}
+
+.flex-item + .flex-item {
+	margin-left: 2%;
 }
 
 .legend {
