correction des affichages lié a la relation user.personnage
A vérifier : Il semble qu'à la création du personnage. Si personnage.user_id est bien enregistré.
User.personnage_id lui ne l'est pas.

--- a/src/LarpManager/Views/gn/participants.twig
+++ b/src/LarpManager/Views/gn/participants.twig
@@ -90,8 +90,10 @@
 						{% endif %}
 					</td>
 					<td>
-						{% if participant.user.personnage %}
+						{% if participant.personnage is empty and participant.user.personnage %}
 							<a href="{{ path('personnage.admin.detail', {'personnage': participant.user.personnage.id}) }}">{{ participant.user.personnage.nom }}</a>
+						{% elseif participant.user.personnage is empty and participant.personnage %}
+							<a href="{{ path('personnage.admin.detail', {'personnage': participant.personnage.id}) }}">{{ participant.personnage.nom }}</a>
 						{% else %}
 							<span class="text-danger">Aucun personnage sélectionné</span>
 						{% endif %}
