--- a/src/LarpManager/Views/public/groupe/fragment/detail.twig
+++ b/src/LarpManager/Views/public/groupe/fragment/detail.twig
@@ -25,7 +25,7 @@
 </div>
 
 {% if groupe.scenariste %}
-	{ groupe.scenariste.etatCivil }}&nbsp;({{ groupe.scenariste.email }})
+	{{ groupe.scenariste.etatCivil }}&nbsp;({{ groupe.scenariste.email }})
 {% else %}
 	<span class="fa fa-exclamation-triangle" aria-hidden="true"></span>&nbsp;Attention, ce groupe n'a pas de scénariste.
 {% endif %}
