--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -65,6 +65,7 @@ table tr td {
 			 	<td>{{ personnage.renomme|default(0) }}</td>
 			 	<td>{{ personnage.heroisme|default(0) }}</td>
 			 	<td>{{ personnage.pugilat }}</td>
+			</tr>
 		</tbody>
 	</table>	
 								
@@ -74,11 +75,12 @@ table tr td {
 				<th>Expérience</th>
 				<th>Religions</th>
 				<th>Langages</th>
+				<th>Bracelets</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td style="text-align: center; width: 33%;">{{ personnage.xp|default(0) }} / {{ personnage.xpTotal }} xp</td>
+				<td style="text-align: center; width: 25%;">{{ personnage.xp|default(0) }} / {{ personnage.xpTotal }} xp</td>
 				<td>
 					{% for personnageReligion in personnage.personnagesReligions %}
 						{% if personnageReligion.religion.secret %}<strong>Secret</strong> - {% endif %}{{ personnageReligion.religion.label }} - {{ personnageReligion.religionLevel.label }}<br />
@@ -92,9 +94,9 @@ table tr td {
 				<td>
 					<ul>
 						{% for materiel in langueMateriel %}
-							<li><strong>{{ materiel }}</strong></li>
+							<strong>{{ materiel }}</strong><br />
 						{% else %}
-							<li>Aucun matériel</li>
+							Aucun matériel
 						{% endfor %}
 					</ul>
 				</td>
