--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -233,11 +233,20 @@ table tr td {
 	<hr />
 	<br />
 	<div class="print-center">
-		<p>Partie à découper et à remettre au PC Joueur par votre meurtrier en cas de mort du personnage.</p>
+		<p>Partie à découper et à remettre au PC Joueur par votre meurtrier en cas de mort de votre personnage.</p>
 		<strong>Numéro du personnage :</strong> #{{ personnage.id }}<br />
 		<strong>Identité du personnage :</strong> {{ personnage.identity }}<br />
 		<h3>MORT</h3>
 	</div>
-	
+	<hr />
+	<div class="print-center">
+		<p>Si cette partie venait à être détachée, le niveau de santé maximum de votre personnage serait au mieux à l'état Blessé jusqu'à la fin du GN, sans qu'une quelconque compétence ne puisse le faire revenir à l'état "En pleine santé".</p>
+	</div>
+	<hr />
+	<div class="print-center">
+		<p>Partie à découper et à remettre à la personne qui vous la demandera.</p>
+		<strong>Numéro du personnage :</strong> #{{ personnage.id }}<br />
+		<strong>Valeur :</strong> {{ personnage.energievitale }}
+	</div>	
 	
 {% endblock content %}
