Ajout de pagination manquante sur les documents

--- a/src/LarpManager/Views/admin/document/index.twig
+++ b/src/LarpManager/Views/admin/document/index.twig
@@ -55,7 +55,7 @@
 		</ul>
 	</div>
 
-	<!--{ paginator|raw }-->
+	{{ paginator|raw }}
 
 		<table class="table table-condensed table-striped table-bordered">
 			<thead>
