--- a/src/LarpManager/Views/admin/document/index.twig
+++ b/src/LarpManager/Views/admin/document/index.twig
@@ -39,7 +39,6 @@
 						{{ form_rest(form) }}
 					</form>
 
-
 				</div>
 			</li>
 
@@ -55,7 +54,7 @@
 		</ul>
 	</div>
 
-	<!--{ paginator|raw }-->
+	{{ paginator|raw }}
 
 		<table class="table table-condensed table-striped table-bordered">
 			<thead>
