--- a/src/LarpManager/Views/admin/groupe/printMateriel.twig
+++ b/src/LarpManager/Views/admin/groupe/printMateriel.twig
@@ -12,7 +12,9 @@ body {
 
 {% for participant in participants if participant.personnage %}
 
-	<h2>#{{ participant.personnage.id }} - {{ participant.personnage.identity }}</h2>
+	<div class="print-center">
+		<h2>#{{ participant.personnage.id }} - {{ participant.personnage.identity }}</h2>
+	</div>
 	<h3>Groupe {{groupe.numero }} - {{ groupe.nom }}</h3>
 	
 	{% for participantHasRestauration in participant.participantHasRestaurations %}
@@ -26,9 +28,15 @@ body {
 		PAS DE PERSONNAGE SECONDAIRE
 	{% endif %}
 	<br />
-		
+	
+	{% if participant.personnage.renomme|default(0) > 4 %}
 	<strong>Renommée :</strong> {{ participant.personnage.renomme|default(0) }}<br />
+	{% endif %}
+
+	{% if participant.personnage.richesse|default(0) > 0 %}
 	<strong>Richesse :</strong> {{ participant.personnage.richesse|default(0) }} pièces d'argent<br />
+	{% endif %}
+
 	<strong>Lié aux compétences :</strong>
 	<ul>
 	{% set hasMateriel = 0 %}
@@ -66,11 +74,9 @@ body {
 				{% set mykey = personnageLangue.langue.groupeLangue.couleur %}
 				{% if mykey not in bracelets|keys %}
 					{% set bracelets = bracelets|merge({(mykey): (personnageLangue.langue.label)}) %}
-					<li>{{ personnageLangue.langue.groupeLangue.couleur }} ({{ personnageLangue.langue.label }})</li>
+					<li>Bracelet {{ personnageLangue.langue.groupeLangue.couleur }} ({{ personnageLangue.langue.label }})</li>
 				{% endif %}
 			{% endif %}
-		{% else %}
-			<li>Aucun matériel</li>
 		{% endfor %}
 	</ul>
 	{% endif %}
@@ -80,7 +86,7 @@ body {
 		<strong>Documents</strong>
 		<ul>
 		{% for document in participant.personnage.documents %}
-			<li><strong>{{ document.code }}</strong>&nbsp;{{ document.titre }}</li>
+			<li><strong>{{ document.code }}</strong> - {{ document.titre }}</li>
 		{% endfor %}
 		</ul>
 	{% endif %}
@@ -90,7 +96,7 @@ body {
 		<strong>Objets</strong>
 		<ul>
 		{% for item in participant.personnage.items %}
-			<li><strong>{{ item.numero }}</strong>&nbsp;{{ item.label }}</li>
+			<li><strong>{{ item.numero }}</strong> - {{ item.label }}</li>
 		{% endfor %}
 		</ul>
 	{% endif %}
@@ -116,12 +122,16 @@ body {
 	{% endif %}
 	
 	{# Matériel supplémentaire #}
-	{% if participant.personnage.materiel|length > 0 %}
-		<strong>Matériel supplémentaire</strong>
-		<ul>
-			<li>{{ participant.personnage.materiel }}</li>
-		</ul>
-	{% endif %}
+	<strong>Matériel supplémentaire</strong>
+	<ul>
+		<li>1 Bandeau blanc</li>
+		<li>1 Bandeau rougeâtre (ou blanc tâché de rouge)</li>
+		<li>1 Fiche de personnage (dans une pochette plastifiée)</li>
+		<li>1 Fiche retour de personnage</li>
+		{% if participant.personnage.materiel|length > 0 %}
+		<li>{{ participant.personnage.materiel }}</li>
+		{% endif %}
+	</ul>
 
 	{% if participant.personnage.isSensible %}
 		<strong>Personnage sensible</strong>
@@ -133,8 +143,7 @@ body {
 	<hr class="print-page-break" />
 
 {% else %}
-	Attention ! Pas de personnage.
-	
+	Attention ! Pas de personnage.	
 	<hr class="print-page-break" />
 {% endfor %}
 
