--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -1,9 +1,17 @@
 {% extends "layout_print.twig" %}
 
+{% block style %}
+<style>
+body {
+	font-size:12px;
+}
+</style>
+{% endblock style %}
+
 {% block content %}
 
 <div class="print-center">
-	<h2>{{ personnage.identity }}</h2>
+	<h2>#{{ personnage.id }} - {{ personnage.identity }}</h2>
 </div>
 <br />
 {% if personnage.user %}
@@ -14,12 +22,16 @@
 		{% else %}
 			PAS DE PERSONNAGE SECONDAIRE
 		{% endif %}
-		
 {% endif %}
 <br/>
+{% if personnage.renomme|default(0) > 4 %}
 <strong>Renommée :</strong> {{ personnage.renomme|default(0) }}<br />
+{% endif %}
+
+{% if personnage.richesse|default(0) > 0 %}
 <strong>Richesse :</strong> {{ personnage.richesse|default(0) }} pièces d'argent<br />
-<br />
+{% endif %}
+
 <strong>Lié aux compétences</strong>
 <ul>
 {% set hasMateriel = 0 %}
@@ -48,10 +60,15 @@
 {% endif %}
 <strong>Lié aux langues</strong>
 <ul>
-	{% for materiel in langueMateriel %}
-		<li><strong>{{ materiel }}</strong></li>
-	{% else %}
-		<li>Aucun matériel</li>
+	{% set bracelets = [] %}
+	{% for personnageLangue in personnage.personnageLangues %}
+		{% if personnageLangue.langue.diffusion > 0 and personnageLangue.langue.secret == 0 %}
+			{% set mykey = personnageLangue.langue.groupeLangue.couleur %}
+			{% if mykey not in bracelets|keys %}
+				{% set bracelets = bracelets|merge({(mykey): (personnageLangue.langue.label)}) %}
+				<li>Bracelet {{ personnageLangue.langue.groupeLangue.couleur }} ({{ personnageLangue.langue.label }})</li>
+			{% endif %}
+		{% endif %}
 	{% endfor %}
 </ul>
 																
@@ -60,7 +77,7 @@
 	<strong>Documents</strong>
 	<ul>
 	{% for document in personnage.documents %}
-		<li><strong>{{ document.code }}</strong>&nbsp;{{ document.titre }}</li>
+		<li><strong>{{ document.code }}</strong> - {{ document.titre }}</li>
 	{% endfor %}
 	</ul>
 {% endif %}
@@ -70,7 +87,7 @@
 	<strong>Objets</strong>
 	<ul>
 	{% for item in personnage.items %}
-		<li><strong>{{ item.numero }}</strong>&nbsp;{{ item.label }}</li>
+		<li><strong>{{ item.numero }}</strong> - {{ item.label }}</li>
 	{% endfor %}
 	</ul>
 {% endif %}
@@ -96,12 +113,16 @@
 {% endif %}
 
 {# Matériel supplémentaire #}
-{% if personnage.materiel|length > 0 %}
-	<strong>Matériel supplémentaire</strong>
-	<ul>
-		<li>{{ personnage.materiel }}</li>
-	</ul>
-{% endif %}
+<strong>Matériel supplémentaire</strong>
+<ul>
+	<li>1 Bandeau blanc</li>
+	<li>1 Bandeau rougeâtre (ou blanc tâché de rouge)</li>
+	<li>1 Fiche de personnage (dans une pochette plastifiée)</li>
+	<li>1 Fiche retour de personnage</li>
+	{% if personnage.materiel|length > 0 %}
+	<li>{{ personnage.materiel }}</li>
+	{% endif %}
+</ul>
 
 {% if personnage.isSensible %}
 	<strong>Personnage sensible</strong>
