--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -20,6 +20,14 @@
 		<div class="panel-body">
 			<div class="list-group">
 				<div class="list-group-item">
+					<h6>Scénariste</h6>
+					{% if groupeSecondaire.scenariste is null %}
+						<p>Aucun</p>
+					{% else %}
+						<p>{{ groupeSecondaire.scenariste.etatCivil }}&nbsp;({{ groupeSecondaire.scenariste.email }})</p>
+					{% endif %}
+				</div>
+				<div class="list-group-item">
 					<h6>Description (publique)</h6>
 					<p>{{ groupeSecondaire.description|markdown }}</p>
 				</div>
@@ -27,6 +35,7 @@
 					<h6>Description (secrete)</h6>
 					<p>{{ groupeSecondaire.descriptionSecrete|markdown }}</p>
 				</div>
+
 				
 				<div class="list-group-item">
 					<h6>Matériel</h6>
