--- a/src/LarpManager/Views/rule/list.twig
+++ b/src/LarpManager/Views/rule/list.twig
@@ -32,7 +32,7 @@
 				<div class="list-group-item">
 					<h5 class="list-group-item-heading">Vidéos d'exemples de règles</h5>
 					<p class="list-group-item-text">&nbsp;</p>
-					<p class="list-group-item-text">Vous pourrez retrouver ici quelques vidéos de règles : <a href="https://www.youtube.com/watch?v=0xl5aw8zOiA&list=PLf4sB0v9r7NEAbDJME9RoWadn4mOGIKF3">Playlists des règles LH5</a>.</p>
+					<p class="list-group-item-text">Vous pourrez retrouver ici quelques vidéos de règles : <a href="https://www.youtube.com/playlist?list=PLf4sB0v9r7NEAbDJME9RoWadn4mOGIKF3">Playlists des règles LH5 et LH6</a>.</p>
 					<p class="list-group-item-text">&nbsp;</p>
 					<p class="list-group-item-text"><strong>LH6 :</strong> Remplacez les itérations de "Charme" par "Charisme" pour la vidéo en question à partir du LH6.</p>
 				</div>
