--- a/src/LarpManager/Views/admin/personnage/print.twig
+++ b/src/LarpManager/Views/admin/personnage/print.twig
@@ -80,7 +80,7 @@ table tr td {
 		</thead>
 		<tbody>
 			<tr>
-				<td style="text-align: center; width: 25%;">{{ personnage.xp|default(0) }} / {{ personnage.xpTotal }} xp</td>
+				<td>{{ personnage.xp|default(0) }} / {{ personnage.xpTotal }} xp</td>
 				<td>
 					{% for personnageReligion in personnage.personnagesReligions %}
 						{% if personnageReligion.religion.secret %}<strong>Secret</strong> - {% endif %}{{ personnageReligion.religion.label }} - {{ personnageReligion.religionLevel.label }}<br />
@@ -93,10 +93,17 @@ table tr td {
 				</td>
 				<td>
 					<ul>
-						{% for materiel in langueMateriel %}
-							<strong>{{ materiel }}</strong><br />
+						{% set bracelets = [] %}
+						{% for personnageLangue in personnage.personnageLangues %}
+							{% if personnageLangue.langue.diffusion > 0 and personnageLangue.langue.secret == 0 %}
+								{% set mykey = personnageLangue.langue.groupeLangue.couleur %}
+								{% if mykey not in bracelets|keys %}
+									{% set bracelets = bracelets|merge({(mykey): (personnageLangue.langue.label)}) %}
+									<strong>Bracelet {{ personnageLangue.langue.groupeLangue.couleur }}</strong><br />
+								{% endif %}
+							{% endif %}
 						{% else %}
-							Aucun matériel
+							Aucun bracelet
 						{% endfor %}
 					</ul>
 				</td>
