--- a/src/LarpManager/Views/personnage/fragment/historique_xp.twig
+++ b/src/LarpManager/Views/personnage/fragment/historique_xp.twig
@@ -13,7 +13,7 @@
 			<h6 class="list-group-item-heading">Historique de vos gains d'expérience</h6>
 			<ul>
 			{% for historique in personnage.experienceGains %}
-				<li>Le {{ historique.operationDate|date("Y-m-d h:i:s") }} vous avez gagné {{ historique.xpGain }} xp {% if historique.explanation %} pour la raison suivante : "{{ historique.explanation }}"{% endif %}.</li>
+				<li>Le {{ historique.operationDate|date("Y-m-d H:i:s") }} vous avez gagné {{ historique.xpGain }} xp {% if historique.explanation %} pour la raison suivante : "{{ historique.explanation }}"{% endif %}.</li>
 			{% endfor %}
 			</ul>
 		</div>
@@ -23,7 +23,7 @@
 			<h6 class="list-group-item-heading">Historique de vos achats de compétence</h6>
 			<ul>
 			{% for historique in personnage.experienceUsages %}
-				<li>Le {{ historique.operationDate|date("Y-m-d h:i:s") }} vous avez utilisé {{ historique.xpUse }} xp pour acquérir {{ historique.competence.label }}.</li>
+				<li>Le {{ historique.operationDate|date("Y-m-d H:i:s") }} vous avez utilisé {{ historique.xpUse }} xp pour acquérir {{ historique.competence.label }}.</li>
 			{% endfor %}
 			</ul>
 		</div>
