--- a/src/LarpManager/Views/public/personnage/fragment/pugilat.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/pugilat.twig
@@ -13,7 +13,7 @@
 		<h6>Historique</h6>		
 		<div class="list-group">
 			{% for historique in personnage.displayPugilat %}
-				<div class="list-group-item">{{ historique.date|date("Y-m-d h:i:s") }} : {% if historique.pugilat > 0 %}+{% endif %}{{ historique.pugilat }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
+				<div class="list-group-item">{{ historique.date|date("Y-m-d H:i:s") }} : {% if historique.pugilat > 0 %}+{% endif %}{{ historique.pugilat }}  {% if historique.explication %} pour la raison suivante : "{{ historique.explication }}"{% endif %}.</div>
 			{% endfor %}
 		</div>
 	</div>
