--- a/src/LarpManager/Views/public/personnage/fragment/background.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/background.twig
@@ -5,7 +5,7 @@
 
 {% if personnage.backgrounds('OWNER')|length > 0 %}
 	{% for background in personnage.personnageBackgrounds %}
-		<h6 class="list-group-item-heading">Background</h6>
+		<h6 class="list-group-item-heading">Background ({{ background.gn.label }})</h6>
 		{{ background.text|markdown }}
 	{% endfor %}
 {% else %}
