--- a/src/LarpManager/Views/admin/groupe/printPerso.twig
+++ b/src/LarpManager/Views/admin/groupe/printPerso.twig
@@ -228,7 +228,14 @@ table tr td {
 		<strong>Identité du personnage :</strong> {{ personnage.identity }}<br />
 		<h3>MORT</h3>
 	</div>
-	
+	<hr />
+	<hr />
+	<div class="print-center">
+		<p>Partie à découper et à remettre à la personne qui vous la demandera.</p>
+		<h3>VITALITÉ</h3>
+		<strong>Numéro du personnage :</strong> #{{ personnage.id }}<br />
+		<strong>Valeur :</strong> {{ personnage.energievitale }}
+	</div>		
 	<div class="print-page-break"></div>
 {% else %}
 Ce participant ne dispose pas de personnages
